--- a/HemenBiletProje/HemenBiletProje.csproj
+++ b/HemenBiletProje/HemenBiletProje.csproj
@@ -141,7 +141,6 @@
     <Compile Include="Areas\Admin\Controllers\CategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\FlightController.cs" />
     <Compile Include="Context\TravelContext.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\FlightController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -159,8 +158,6 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Models\FlightInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -647,8 +644,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\User\SignUp.cshtml" />
+    <Content Include="Views\Register\SignUp.cshtml" />
     <Content Include="Views\Flight\FlightSearchPage.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\AdminLayout\Index.cshtml" />
@@ -660,6 +656,7 @@
     <Content Include="Views\Category\CategoryList.cshtml" />
     <Content Include="Views\Flight\FlightListPage.cshtml" />
     <Content Include="Views\Flight\Payment.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
