--- a/HemenBiletProje/Web.config
+++ b/HemenBiletProje/Web.config
@@ -68,7 +68,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TravelContext" connectionString="Data Source=GULSEN\SQLEXPRESS;initial catalog=HemenBiletDb; integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="TravelContext" connectionString="Data Source=LAPTOP-UTM9JSOS\SQLEXPRESS;initial catalog=HemenBiletDb; integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
