--- a/HemenBiletProje/HemenBiletProje.csproj
+++ b/HemenBiletProje/HemenBiletProje.csproj
@@ -138,9 +138,7 @@
     <Compile Include="Areas\Admin\Controllers\AdminLayoutController.cs" />
     <Content Include="Content\FlightListPageStyle.css" />
     <Content Include="Content\FlightStyle.css" />
-    <Compile Include="Areas\Admin\Controllers\CategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\FlightController.cs" />
-    <Compile Include="Context\TravelContext.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\FlightController.cs" />
@@ -151,13 +149,18 @@
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Destination.cs" />
+    <Compile Include="Entities\FlightContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Entities\LoginUser.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="Models\FlightInfo.cs" />
+    <Compile Include="Migrations\202412171517511_InitialCreate.cs" />
+    <Compile Include="Migrations\202412171517511_InitialCreate.Designer.cs">
+      <DependentUpon>202412171517511_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Flight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Services\UserService.cs" />
@@ -660,12 +663,15 @@
     <Content Include="Views\Category\CategoryList.cshtml" />
     <Content Include="Views\Flight\FlightListPage.cshtml" />
     <Content Include="Views\Flight\Payment.cshtml" />
+    <Content Include="Views\Flight\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\AdminLayout\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="Context\" />
+    <Folder Include="Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -693,6 +699,11 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202412171517511_InitialCreate.resx">
+      <DependentUpon>202412171517511_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
