--- a/HemenBiletProje/Web.config
+++ b/HemenBiletProje/Web.config
@@ -68,8 +68,12 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TravelContext" connectionString="Data Source=GULSEN\SQLEXPRESS;initial catalog=HemenBiletDb; integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="FlightContext"
+         connectionString="Data Source=GULSEN;Initial Catalog=Flights;Integrated Security=True;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
